# HMMRWAR

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
inc/: argparser.hpp
inc/decompose/: genome_reader.hpp
inc/io/: bam_reader.hpp  genome_reader.hpp
meta/: runHMMRATAC  verslag.tex
src/: argparser.cpp  main.cpp
src/decompose/: genome_reader.cpp
src/io/: bam_reader.cpp  genome_reader.cpp
